--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.glassfish.jaxb</groupId>
+          <artifactId>jaxb-runtime</artifactId>
+          <version>2.3.3</version>
+      </dependency>
   </dependencies>
 
   <build>
